package Elements;

public class Day {
    private String name;
    private int id;

    public Day() {

    }

    public void setName(String name) {
        this.name = name;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public int getId() {
        return id;
    }

    public Day(String name) {
    }

}
