package Elements;

public class Dish {

    private String name;
    private int id;

    public Dish() {

    }

    public void setName(String name) {
        this.name = name;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public int getId() {
        return id;
    }

    public Dish(String name) {
    }

    @Override
    public String toString() {
        return name;
    }
}
