package com.company;

import Elements.*;
import data.DataConnector;
import view.*;

public class Main {

    public static void main(String[] args) {

        new ViewMenageMain();
    }
}
