@startuml

title __DIETA's Class Diagram__\n

  namespace Elements {
    class Elements.Day {
    }
  }
  

  namespace Elements {
    class Elements.DayParser {
    }
  }
  

  namespace Elements {
    class Elements.Dish {
    }
  }
  

  namespace Elements {
    class Elements.DishParser {
    }
  }
  

  namespace Elements {
    class Elements.Meal {
    }
  }
  

  namespace Elements {
    class Elements.MealParser {
    }
  }
  

  namespace Elements {
    class Elements.Norma {
    }
  }
  

  namespace Elements {
    class Elements.Product {
    }
  }
  

  namespace Elements {
    class Elements.ProduktParser {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace data {
    class data.DataConnector {
    }
  }
  

  namespace data {
    class data.DayDatabase {
    }
  }
  

  namespace data {
    class data.DishDatabase {
    }
  }
  

  namespace data {
    class data.MealDatabase {
    }
  }
  

  namespace data {
    class data.ProduktDatabase {
    }
  }
  

  namespace data {
    namespace Tests {
      class Tests.Tests.DataConnectorTest {
      }
    }
  }
  

  namespace data {
    namespace Tests {
      class Tests.Tests.DayDatabaseTest {
      }
    }
  }
  

  namespace data {
    namespace Tests {
      class Tests.Tests.DecadeDatabaseTest {
      }
    }
  }
  

  namespace data {
    namespace Tests {
      class Tests.Tests.DishDatabaseTest {
      }
    }
  }
  

  namespace data {
    namespace Tests {
      class Tests.Tests.MealDatabaseTest {
      }
    }
  }
  

  namespace data {
    namespace Tests {
      class Tests.Tests.ProduktDatabaseTest {
      }
    }
  }
  

  namespace view {
    class view.ViewMenageDay {
    }
  }
  

  namespace view {
    class view.ViewMenageDish {
    }
  }
  

  namespace view {
    class view.ViewMenageMain {
    }
  }
  

  namespace view {
    class view.ViewMenageMeal {
    }
  }
  

  namespace view {
    class view.ViewMenageProduct {
    }
  }
  

  namespace view {
    class view.ViewMenageNorma {
    }
  }
  

  data.DayDatabase o-- data.DataConnector : connector
  data.DishDatabase o-- data.DataConnector : connector
  data.MealDatabase o-- data.DataConnector : connector
  data.ProduktDatabase o-- data.DataConnector : connector
  view.ViewMenageDay -up-|> javax.swing.JFrame
  view.ViewMenageDay o-- Elements.Meal : wybranyPosilekZListy
  view.ViewMenageDish -up-|> javax.swing.JFrame
  view.ViewMenageDish o-- Elements.Product : produktDoUsuniecia
  view.ViewMenageDish o-- Elements.Dish : wybraneDanieZListy
  view.ViewMenageMain -up-|> javax.swing.JFrame
  view.ViewMenageMeal -up-|> javax.swing.JFrame
  view.ViewMenageMeal o-- Elements.Dish : danieDoUsuniecia
  view.ViewMenageMeal o-- Elements.Meal : wybranyPosilekZListy
  view.ViewMenageProduct -up-|> javax.swing.JFrame
  view.ViewMenageProduct o-- Elements.Product : wybranyProduktZListy
  view.ViewMenageNorma -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
